--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,12 @@ html, body {
     opacity: 1;
   }
 }
+
+/* Hide horizontal scrollbar on mobile */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
